--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,9 +22,9 @@
     <form class="form-signin" method="post" th:action="@{/login}">
         <h2 class="form-signin-heading">Login to account</h2>
         <label for="username">Username</label>:
-        <input type="text" id="username" name="username" autofocus="autofocus"/><br/>
+        <input type="text" id="username" name="username" autofocus="autofocus" required/><br/>
         <label for="password">Password</label>:
-        <input type="password" id="password" name="password"/><br/>
+        <input type="password" id="password" name="password" required/><br/>
         <input type="submit" th:value="Login"/>
     </form>
 </div>
