--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -24,13 +25,6 @@
     <a th:href="@{/movies}">Movies</a>
     <a th:href="@{/account}">Account</a>
 </div>
-<div class="container">
-    <h1>Welcome</h1>
-    <h1>1. Visit <a th:href="@{/login}">Login page (available to any user)</a> </h1>
-    <h1>2. Visit <a th:href="@{/customer}">Customer page (requires customer role)</a></h1>
-    <h1>3. Visit <a th:href="@{/moderator}">Moderator page (requires moderator role)</a></h1>
-    <h1>4. Visit <a th:href="@{/trainee}">Admin trainee page (requires admin trainee role)</a></h1>
-    <h1>5. Visit <a th:href="@{/admin}">Admin page (requires admin role)</a></h1>
-</div>
+
 </body>
 </html>
