--- a/src/main/resources/templates/forgotPassword.html
+++ b/src/main/resources/templates/forgotPassword.html
@@ -1,4 +1,5 @@
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -16,21 +17,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="navbar">
-    <a class="logo" th:href="@{/index}">
-        <span>ECinema</span>
-    </a>
-    <a th:href="@{/index}">Home</a>
-    <a th:href="@{/movies}">Movies</a>
-    <a th:href="@{/account}">Account</a>
-</div>
-<div class="container">
-    <h1>Welcome</h1>
-    <h1>1. Visit <a th:href="@{/login}">Login page (available to any user)</a> </h1>
-    <h1>2. Visit <a th:href="@{/customer}">Customer page (requires customer role)</a></h1>
-    <h1>3. Visit <a th:href="@{/moderator}">Moderator page (requires moderator role)</a></h1>
-    <h1>4. Visit <a th:href="@{/trainee}">Admin trainee page (requires admin trainee role)</a></h1>
-    <h1>5. Visit <a th:href="@{/admin}">Admin page (requires admin role)</a></h1>
-</div>
+
 </body>
 </html>
