--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -714,8 +714,8 @@ input[type="submit"]:hover {
 
 .container {
     width: 60%;
-    background-color: white;
-    color: black;
+    background-color: black;
+    color: white;
     margin: auto;
 }
 
