--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,6 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>ECinema Theaters</title>
-    <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet">
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;
@@ -13,18 +12,38 @@
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous">
+    <link th:href="@{/css/style.css}" rel="stylesheet">
 </head>
 <body>
-<div class="navbar">
+<nav class="naviBar">
     <a class="logo" th:href="@{/index}">
-        <span>ECinema</span>
+        ECinema<span> Entertainment</span>
     </a>
     <a th:href="@{/index}">Home</a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
     <a th:href="@{/movies}">Movies</a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
     <a th:href="@{/theaters}">Theaters</a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
     <a th:href="@{/about}">About</a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
     <a th:href="@{/account}">Account</a>
-</div>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+</nav>
 <div class="container">
     <table class="table table-bordered table-dark">
         <thead class="thead-dark">
@@ -38,14 +57,14 @@
         <tr>
             <td>
                 <a th:href="@{/theaters}">
-                    <img alt="failed to load image" src="" th:src="@{/img/theater.jpeg}" width="876" height="493">
+                    <img alt="failed to load image" src="" th:src="@{/img/theater.jpeg}" width="875" height="500">
                 </a>
             </td>
         </tr>
         <tr>
             <td>
                 <a th:href="@{/movies}">
-                    <img alt="failed to load image" src="" th:src="@{/img/movie.png}" width="460" height="320">
+                    <img alt="failed to load image" src="" th:src="@{/img/movies.png}" width="875" height="500">
                 </a>
             </td>
         </tr>
