--- a/src/main/resources/templates/movie-info.html
+++ b/src/main/resources/templates/movie-info.html
@@ -51,26 +51,25 @@
         <h1 th:text="${movie.title}"></h1>
     </div>
     <div class="row">
-        <img th:src="${movie.image}" width="300" src="" alt="">
+        <img th:src="${movie.image}" width="400" height="500" src="" alt="">
         <br/>
         <iframe width="960" height="540" th:src="${movie.trailer}"></iframe>
     </div>
-    <table class="table table-borderless">
-        <tr>
-            <td style="alignment: right">Average Rating:</td>
-            <td style="alignment: left" th:each="star:${#numbers.sequence(0,avgRating)}">
-                <img th:src="@{/img/star.png}" width="50" height="50" src="" alt="">
-            </td>
-        </tr>
-    </table>
-    <div class="row">
-        <button class="btn btn-primary">
-            <a th:href="@{/movie-screenings/{id}(id=${movie.id})}">Screenings</a>
-        </button>
-        <button class="btn btn-primary">
-            <a th:href="@{/movie-reviews/{id}(id=${movie.id})}">Reviews</a>
-        </button>
-    </div>
+    <br/>
+    <form method="get" th:action="@{/movie-screenings/{id}(id=${movie.id})}">
+        <button class="dropbtn" style="alignment: inherit; font-size: xx-large">Screenings</button>
+    </form>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <form method="get" th:action="@{/movie-reviews/{id}(id=${movie.id})}">
+        <button class="dropbtn" style="alignment: inherit; font-size: xx-large">Reviews</button>
+    </form>
+    <br/>
+    <span style="alignment: center; color: white">Average Rating Out Of 10 Stars:</span>
+    <span style="alignment: center" th:each="star:${#numbers.sequence(0,avgRating)}">
+        <img th:src="@{/img/star.png}" width="50" height="50" src="" alt="">
+    </span>
 </div>
 <div class="moviesContainer">
     <table class="table table-striped table-bordered">
