Working on changing password

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -48,6 +48,7 @@
     <label>
         <button class="btn btn-primary"><a th:href="@{/forgotPassword}">Forgot Password</a></button>
     </label>
+    <span class="text" th:if="${error} != null" th:text="${error}"></span>
 </div>
 </body>
 </html>
