Adding and editing movies

--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -17,6 +17,52 @@
     <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
 </head>
 <body>
-
+<nav class="naviBar">
+    <a class="logo" th:href="@{/index}">
+        ECinema<span> Entertainment</span>
+    </a>
+    <a th:href="@{/index}">Home</a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a th:href="@{/movies}">Movies</a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a th:href="@{/about}">About</a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a th:href="@{/account}">Account</a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+</nav>
+<div class="profileContainer">
+    <form th:object="${changePasswordForm}" th:action="@{/change-password}" method="post">
+        <table class="table table-bordered table-striped">
+            <tr th:if="${loggedIn == false}">
+                <td>Email:</td>
+                <td><label><input th:field="*{email}" type="text" required></label></td>
+            </tr>
+            <tr>
+                <td>Password:</td>
+                <td><label><input th:field="*{password}" type="password" required></label></td>
+            </tr>
+            <tr>
+                <td>Confirm Password:</td>
+                <td><label><input th:field="*{confirmPassword}" type="password" required></label></td>
+            </tr>
+            <tr>
+                <td><input type="submit" value="submit"></td>
+            </tr>
+        </table>
+    </form>
+    <table class="table table-bordered table-striped">
+        <tr th:each="error:${errors}">
+            <td th:text="${error}"></td>
+        </tr>
+    </table>
+</div>
 </body>
 </html>
