--- a/src/main/resources/templates/edit-movie.html
+++ b/src/main/resources/templates/edit-movie.html
@@ -3,5 +3,8 @@
 <head th:insert="fragments/header :: header"></head>
 <body>
 <nav th:insert="fragments/webpage-top :: webpage-top"></nav>
+<div class="container">
+    <div th:insert="fragments/movie-form :: movie-form(${action}, ${movieForm})"></div>
+</div>
 </body>
 </html>
