--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,6 +5,31 @@
     <title>Title</title>
 </head>
 <body>
+<nav class="naviBar">
+    <a class="logo" th:href="@{/index}">
+        ECinema<span> Entertainment</span>
+    </a>
+    <a th:href="@{/index}">Home</a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a th:href="@{/movies}">Movies</a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a th:href="@{/theaters}">Theaters</a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a th:href="@{/about}">About</a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a th:href="@{/account}">Account</a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+</nav>
 
 </body>
 </html>
