--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -92,7 +92,8 @@ and when you move the mouse over it (hover) */
     padding: 0 18px;
     display: none;
     overflow: hidden;
-    background-color: #f1f1f1;
+    background-color: black;
+    color: white;
 }
 
 /* The dropdown container */
@@ -607,7 +608,7 @@ input[type="submit"]:hover {
 }
 
 .error {
-    position: absolute;
+    position: static;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -881,4 +882,42 @@ input[type="submit"]:hover {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 400px;
+}
+
+/* The sidebar menu */
+.sidenav {
+    width: 120px; /* Set the width of the sidebar */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #111; /* Black */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 50px;
+}
+
+/* The navigation menu links */
+.sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 20px;
+    color: #818181;
+    display: block;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+/* Style page content */
+.main {
+    margin-left: 160px; /* Same as the width of the sidebar */
+    padding: 0 10px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
 }
