--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,49 +1,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>ECinema Theaters</title>
-    <link href="https://fonts.googleapis.com" rel="preconnect">
-    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;
-    0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-          rel="stylesheet">
-    <link href="https://fonts.googleapis.com" rel="preconnect">
-    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-          crossorigin="anonymous">
-    <link th:href="@{/css/style.css}" rel="stylesheet">
-</head>
+<head th:insert="fragments/header :: header"></head>
 <body>
-<nav class="naviBar">
-    <a class="logo" th:href="@{/index}">
-        ECinema<span> Entertainment</span>
-    </a>
-    <a th:href="@{/index}">Home</a>
-    &nbsp;
-    &nbsp;
-    &nbsp;
-    <a th:href="@{/movies}">Movies</a>
-    &nbsp;
-    &nbsp;
-    &nbsp;
-    <a th:href="@{/theaters}">Theaters</a>
-    &nbsp;
-    &nbsp;
-    &nbsp;
-    <a th:href="@{/about}">About</a>
-    &nbsp;
-    &nbsp;
-    &nbsp;
-    <a th:href="@{/account}">Account</a>
-    &nbsp;
-    &nbsp;
-    &nbsp;
-</nav>
+<nav th:insert="fragments/webpage-top :: webpage-top"></nav>
 <div class="container">
     <table class="table table-bordered table-dark">
         <thead class="thead-dark">
