--- a/src/main/resources/templates/message-page.html
+++ b/src/main/resources/templates/message-page.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:insert="fragments/header :: header"></head>
 <body>
-
+<nav th:insert="fragments/webpage-top :: webpage-top"></nav>
+<div class="info">
+    <span th:if="${message != null}" th:text="${message}" style="font-size: x-large"></span>
+</div>
 </body>
 </html>
