--- a/src/main/resources/templates/screening.html
+++ b/src/main/resources/templates/screening.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:insert="fragments/header :: header"></head>
 <body>
-
+<nav th:insert="fragments/webpage-top :: webpage-top"></nav>
 </body>
 </html>
