--- a/src/main/resources/templates/movie-screenings.html
+++ b/src/main/resources/templates/movie-screenings.html
@@ -17,7 +17,8 @@
         <thead class="thead-dark">
         <tr>
             <th>Showroom</th>
-            <th>Showtime</th>
+            <th>Show Time</th>
+            <td>End Time</td>
             <th>Seats Available</th>
         </tr>
         </thead>
@@ -25,6 +26,7 @@
         <tr th:each="screening:${screenings}" style="border: red">
             <td th:text="${screening.showroomLetter}"></td>
             <td th:text="${screening.showtimeFormatted()}"></td>
+            <td th:text="${screening.endtimeFormatted()}"></td>
             <td th:text="${screening.seatsAvailable} + '/' + ${screening.totalSeatsInRoom}"></td>
             <td>
                 <button class="button">
