Mock mvc testing

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -32,6 +32,15 @@ table.table-hover td:hover {
     font-style: italic;
 }
 
+.moviesContainer .table-bordered {
+    border-color: red;
+    text-align: left;
+}
+
+table .boldtext {
+    font-weight: bold;
+}
+
 .logo {
     color: orangered;
     text-transform: uppercase;
