--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
         <tbody class="contentContainer">
         <tr>
             <td>
-                <a th:href="@{/theaters}">
+                <a th:href="@{/movies}">
                     <img alt="failed to load image" src="" th:src="@{/img/theater.jpeg}" width="875" height="500">
                 </a>
             </td>
