--- a/src/main/resources/templates/movie-info.html
+++ b/src/main/resources/templates/movie-info.html
@@ -23,50 +23,60 @@
         <button class="dropbtn" style="alignment: inherit; font-size: xx-large">Reviews</button>
     </form>
     <br/>
-    <span style="alignment: center; color: white">Average Rating Out Of 10 Stars:</span>
-    <span style="alignment: center" th:each="star:${#numbers.sequence(0,avgRating)}">
-        <img th:src="@{/img/star.png}" width="50" height="50" src="" alt="">
-    </span>
-</div>
-<div class="moviesContainer">
-    <table class="table table-striped table-bordered">
+    <table th:if="${avgRating >= 1}" style="border: red dot-dot-dash 1px">
         <tbody>
         <tr>
-            <td>Director:</td>
+            <td>
+                <span style="alignment: center; color: white">Average Rating Out Of 10 Stars:</span>
+            </td>
+            <td>
+                <span style="alignment: center" th:each="star:${#numbers.sequence(1,avgRating)}">
+                    <img th:src="@{/img/star.png}" width="50" height="50" src="" alt="">
+                </span>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+<div class="moviesContainer">
+    <table style="border: red solid 2px">
+        <tbody>
+        <tr>
+            <td class="boldtext">Director</td>
             <td th:text="${movie.director}"></td>
         </tr>
         <tr>
-            <td>Synopsis:</td>
+            <td class="boldtext">Synopsis</td>
             <td th:text="${movie.synopsis}"></td>
         </tr>
         <tr>
-            <td>Duration:</td>
+            <td class="boldtext">Duration</td>
             <td th:text="${movie.duration}"></td>
         </tr>
         <tr>
-            <td>Release Date:</td>
+            <td class="boldtext">Release Date</td>
             <td th:text="${movie.releaseMonth} + '-' + ${movie.releaseDay} + '-' + ${movie.releaseYear}"></td>
         </tr>
         <tr>
-            <td>MSRB Rating:</td>
+            <td class="boldtext">MSRB Rating</td>
             <td th:text="${movie.msrbRating}"></td>
         </tr>
         <tr>
-            <td>Cast:</td>
+            <td class="boldtext">Cast</td>
             <td>
                 <span th:each="cast,iterStat:${movie.cast}"
                       th:text="${!iterStat.last} ? ${cast} + ', ': ${cast}"></span>
             </td>
         </tr>
         <tr>
-            <td>Writers:</td>
+            <td class="boldtext">Writers</td>
             <td>
                 <span th:each="writer,iterStat:${movie.writers}"
                       th:text="${!iterStat.last} ? ${writer} + ', ': ${writer}"></span>
             </td>
         </tr>
         <tr>
-            <td>Categories:</td>
+            <td class="boldtext">Categories</td>
             <td>
                 <span th:each="category,iterStat:${movie.movieCategories}"
                       th:text="${!iterStat.last} ? ${category} + ', ': ${category}"></span>
