--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -3,7 +3,7 @@
 <head th:insert="fragments/header :: header"></head>
 <body>
 <nav th:insert="fragments/webpage-top :: webpage-top"></nav>
-<div class="container" style="background: black; color: white">
+<div class="moviesContainer" style="background: black; color: white">
     <h1>Welcome to the ECinema website!</h1>
     <br/>
     <span>This is a website built by John Lavender using Spring boot.</span>
