--- a/src/main/resources/templates/fragments/webpage-top.html
+++ b/src/main/resources/templates/fragments/webpage-top.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <body>
 <div th:fragment="webpage-top">
-    <nav class="naviBar">
+    <nav class="naviBar" style="color: purple; font-size: x-large">
         <a class="logo" th:href="@{/index}">
             ECinema<span> Entertainment</span>
         </a>
@@ -18,7 +18,13 @@
         &nbsp;
         &nbsp;
         &nbsp;
-        <a th:href="@{/account}">Account</a>
+        <div class="dropdown">
+            <button class="dropbtn" style="color: red; font-size: xx-large; alignment: center">Account</button>
+            <div class="dropdown-content" style="background: red; color: white">
+                <a th:each="option:${dropdownMenu}" th:text="${option.first}"
+                   th:href="@{${option.second}}"></a>
+            </div>
+        </div>
         &nbsp;
         &nbsp;
         &nbsp;
