--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:insert="fragments/header :: header"></head>
 <body>
 <nav th:insert="fragments/webpage-top :: webpage-top"></nav>
-<div class="container">
+<div class="moviesContainer">
     <table class="table table-bordered table-dark">
         <thead class="thead-dark">
         <tr>
@@ -11,7 +12,7 @@
             </th>
         </tr>
         </thead>
-        <tbody class="contentContainer">
+        <tbody>
         <tr>
             <td>
                 <a th:href="@{/movies}">
