--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -3,90 +3,32 @@
 <head th:insert="fragments/header :: header"></head>
 <body>
 <nav th:insert="fragments/webpage-top :: webpage-top"></nav>
-<div class="moviesContainer" style="position: center">
+<div>
     <table class="table table-bordered table-striped">
+        <tbody>
         <tr>
-            <td>Movies:</td>
-            <td>
-                <label>
-                    <button class="btn btn-primary">
-                        <a th:href="@{/add-movie}">Add Movie</a>
-                    </button>
-                </label>
-            </td>
-            <td>
-                <label>
-                    <button class="btn btn-primary">
-                        <a th:href="@{/edit-movie-search}">Edit Movie</a>
-                    </button>
-                </label>
-            </td>
-            <td>
-                <label>
-                    <button class="btn btn-primary">
-                        <a th:href="@{/delete-movie-search}">Delete Movie</a>
-                    </button>
-                </label>
-            </td>
+            <td>Manage Movies:</td>
+            <td><a class="btn btn-primary" th:href="@{/add-movie}">Add New Movie</a></td>
+            <td><a class="btn btn-primary" th:href="@{/edit-movie-search}">Edit Movie</a></td>
+            <td><a class="btn btn-primary" th:href="@{/delete-movie-search}">Delete Movie</a></td>
         </tr>
         <tr>
-            <td>Showrooms:</td>
-            <td>
-                <label>
-                    <button class="btn btn-primary">
-                        <a th:href="@{/add-showrooms}">Add Showroom</a>
-                    </button>
-                </label>
-            </td>
-            <td>
-                <label>
-                    <button class="btn btn-primary">
-                        <a th:href="@{/edit-showrooms}">Edit Showroom</a>
-                    </button>
-                </label>
-            </td>
-            <td>
-                <label>
-                    <button class="btn btn-primary">
-                        <a th:href="@{/delete-showrooms}">Delete Showroom</a>
-                    </button>
-                </label>
-            </td>
+            <td>Manage Showrooms:</td>
+            <td><a class="btn btn-primary" th:href="@{/add-showroom}">Add New Showroom</a></td>
+            <td><a class="btn btn-primary" th:href="@{/edit-showroom}">Edit Showroom</a></td>
+            <td><a class="btn btn-primary" th:href="@{/delete-showroom}">Delete Showroom</a></td>
         </tr>
         <tr>
-            <td>Screenings:</td>
-            <td>
-                <label>
-                    <button class="btn btn-primary">
-                        <a th:href="@{/add-screening-search}">Add Screening</a>
-                    </button>
-                </label>
-            </td>
-            <td>
-                <label>
-                    <button class="btn btn-primary">
-                        <a th:href="@{/edit-screening-search}">Edit Screening</a>
-                    </button>
-                </label>
-            </td>
-            <td>
-                <label>
-                    <button class="btn btn-primary">
-                        <a th:href="@{/delete-screening-search}">Delete Screening</a>
-                    </button>
-                </label>
-            </td>
+            <td>Manage Screenings:</td>
+            <td><a class="btn btn-primary" th:href="@{/add-screening-search}">Add New Screening</a></td>
+            <td><a class="btn btn-primary" th:href="@{/edit-screening-search}">Edit Screening</a></td>
+            <td><a class="btn btn-primary" th:href="@{/delete-screening-search}">Delete Screening</a></td>
         </tr>
         <tr>
-            <td>User Accounts:</td>
-            <td>
-                <label>
-                    <button class="btn btn-primary">
-                        <a th:href="@{/manage-user-accounts}">Manage User Accounts</a>
-                    </button>
-                </label>
-            </td>
+            <td>Manage Users:</td>
+            <td><a class="btn btn-primary" th:href="@{/manage-user-accounts}">Manage User Accounts</a></td>
         </tr>
+        </tbody>
     </table>
 </div>
 </body>
