--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -3,39 +3,31 @@
 <head th:insert="fragments/header :: header"></head>
 <body>
 <nav th:insert="fragments/webpage-top :: webpage-top"></nav>
-<div class="moviesContainer">
+<div>
     <form method="get" th:action="@{/movies(page=1)}">
-        Search: <label for="search"></label>
-        <input type="text" name="search"
-               id="search" size="25" th:value="${search}" required/>
+        <span class="bold-white-text">Search:</span>
+        <label for="search"></label>
+        <input type="text" name="search" id="search" size="25" th:value="${search}" required/>
         <button class="button" type="submit">Go</button>
     </form>
-    <table class="table-hover">
-        <tr>
-            <td th:if="${totalPages > 0}" th:each="pageNumber:${pageNumbers}">
-                <a th:href="@{/movies(search=${search}, page=${pageNumber})}"
-                   th:text="${pageNumber}" style="font-size: larger; font-weight: bold">
-                </a>
-            </td>
-        </tr>
-    </table>
+    <ul id="pageNumbers" th:if="${totalPages > 0}">
+        <li th:each="pageNumber:${pageNumbers}">
+            <a class="btn btn-primary" th:classappend="${page == pageNumber ? 'active' : ''}"
+            th:text="${pageNumber}" th:href="@{/movies(search=${search}, page=${pageNumber})}">
+            </a>
+        </li>
+    </ul>
     <table class="table table-hover">
-        <tr th:each="movie:${movies}">
-            <td>
+        <tbody>
+        <tr th:each="entries:${movies}">
+            <td th:each="movie:${entries.value}">
                 <a th:href="@{/movie-info/{id}(id=${movie.id})}">
-                    <img th:src="${movie.image}" width="400" height="500" alt="" src="">
+                    <img th:src="${movie.image}" width="400" height="500"
+                         alt="failed to load image" src="">
                 </a>
             </td>
         </tr>
-    </table>
-    <table class="table-hover">
-        <tr>
-            <td th:if="${totalPages > 0}" th:each="pageNumber:${pageNumbers}">
-                <a th:href="@{/movies(search=${search}, page=${pageNumber})}"
-                   th:text="${pageNumber}" style="font-size: larger; font-weight: bold">
-                </a>
-            </td>
-        </tr>
+        </tbody>
     </table>
 </div>
 </body>
